# shuffle-kit

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  test.yaml
docs/: index.md  reference.md  tutorials.md
docs/getting-started/: about.md  contributing.md  installation.md
docs/reference/: core.md  evaluate.md  models.md  utilities.md
docs/tutorials/: first-simulation.md  probabilities.md  shuffle-model.md
examples/: basic.py  game.py  guessing.py  move_to_top.py  rising.py  solitaire.py
explanation/: index.html
getting-started/contributing/: index.html
getting-started/installation/: index.html
how-to-guides/: index.html
reference/core/: index.html
reference/evaluate/: index.html
reference/models/: index.html
reference/utilities/: index.html
search/: search_index.json
shuffl/: __init__.py  _analyze.py  _deck.py  _exceptions.py  _models.py  _simulate.py  analyze.py  deck.py  games.py  models.py  simulate.py
shuffl/evaluate/: __init__.py  _adjacent.py  _frequencies.py  _guessing.py  _solitaire.py
shuffl/models/: __init__.py  _cut.py  _gsr.py  _sequence.py  _strip.py  _thorp.py
shuffl/utils/: __init__.py  _adjacent_pairs.py  _convert.py  _types.py
tests/: test_analyze.py  test_cut.py  test_deck.py  test_evaluate.py  test_make_sequence.py  test_models.py  test_riffle.py  test_strip.py
tests/evaluate/: test_adjacent.py
tests/utils/: test_adjacent_pairs.py
tutorials/: index.html
